<resources>
    <string name="app_name">App Empresas</string>
    <string name="welcome">BEM-VINDO AO EMPRESAS</string>
    <string name="loren">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="siggin_button">Entrar</string>
    <string name="logo">TODO: Logo da empresa Ioasys</string>
    <string name="email_field">Email</string>
    <string name="password_field">Senha</string>
    <string name="msg_intro_home">Clique na busca para iniciar.</string>
    <string name="search_hint">Pesquisar</string>
    <string name="enterprise_name">Nome da Empresa</string>
    <string name="enterprise_bussiness_type">Negócio</string>
    <string name="enterprise_country">País</string>
    <string name="error_invalid_email">Digite um email válido</string>
    <string name="error_invalid_password">A senha deve conter no mínimo 4 caracteres</string>
    <string name="invalid_login">Login Invalido</string>
    <string name="error_connectior">Falha na Conexão</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
