<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="pedro.com.ioasystestekotlin.viewmodel.EnterpriseListViewModel" />

        <import type="android.view.View" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:onClick="@{() -> item.onClickItem()}">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="112dp"
            android:layout_height="105dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:drawable/ic_menu_report_image"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterpriseNameTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@{item.enterprise.enterprise_name}"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/enterprise_name" />

        <TextView
            android:id="@+id/bussinessTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@{item.enterprise.enterprise_type.enterprise_type_name}"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/enterpriseNameTextViewId"
            tools:text="@string/enterprise_bussiness_type" />

        <TextView
            android:id="@+id/countryTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@{item.enterprise.country}"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/bussinessTextViewId"
            tools:text="@string/enterprise_country" />
    </android.support.constraint.ConstraintLayout>

</layout>